# ChatGPContextMaker

./: .gitignore  Makefile  README.md  pyproject.toml
gpcontext_maker/: __init__.py  __main__.py  concat_files.py  default_gpcontext_ignore.txt
tests/: test_gpcontext_maker_pytest.py
