[tool.poetry]
name = "gpcontext-maker"
version = "0.1.0"
description = ""
authors = ["estill01 <ehs.stillman@gmail.com>"]
readme = "README.md"
packages = [{include = "gpcontext_maker"}]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
