[tool.poetry]
name = "gpcontext_maker"
version = "1.2.0"
description = "Generate a context file of your whole software project to feed into a LLM like ChatGPT"
authors = ["estill01 <ehs.stillman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/estill01/ChatGPContextMaker"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
